# mirl_values_core

./: Cargo.toml  README.md  build.rs
src/: lib.rs  settings.rs
src/value/: container.rs  mod.rs
src/value/conversion/: mod.rs  toml_support.rs
src/value/simple/: color.rs  mod.rs  number.rs  time.rs  unit.rs
